2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Renamed CombatOptionsGump.* to MiscOptionsGump.*
	* Updated project files for this and newvideooptions.shp

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc: Move cfg options so they don't get needlessly read
		during map build. Move config->write_back() to before
		initializing the Game_window. Use USE_OLD_VIDEO_OPTIONS_GUMP
	* gumps/VideoOptions_gump.cc : Move forced define of
		USE_OLD_VIDEO_OPTIONS_GUMP to header.

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.cc: only write to cfg once in Game_window::Game_window

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc, gamewin.*: Add new cfg option to disable scrolling
		the game view with the scrollwheel (when in cheat mode).
		"config/gameplay/scroll_with_mouse" "yes" to allow scrolling.
		"no" to disable it. Default is "no".

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/VideoOptions_gump.cc: Straiten out row values. More
		code changes for separate fullscreen and window settings
	* data/*: new video options gump shape added

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.*, keyactions.cc, gumps/VideoOptions_gump.*: New function
		"setup_video" to consolidate menu settable video configuration
		reading and writing and implementing it into existing code.
		Start code changes for separate fullscreen and window settings.

2011-01-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Increase search range for clothes in sew sched.
	* audio/audio.cc: Fix midi sfx not playing.
	* gumps/AudioOptions_gump.cc: Fix midi_sfx conversion after
		revision 6703 changed conversion numbers.
	* configure.ac: Stressing that midi_sfx will likely sound terrible

2011-01-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* configure.ac: Add --enable-midi-sfx configure option